--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gwa-calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kimpfajardo.github.io/gwa-calculator",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,7 +21,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.7",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.38",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16"
   }
