--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gwa-calculator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://git.heroku.com/gwa-calculator.git",
+  "homepage": "https://gwa-calculator.herokuapp.com/",
   "dependencies": {
     "@craco/craco": "^6.3.0",
     "@testing-library/jest-dom": "^5.14.1",
